--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!--
   Markdown Renderer App
-  Usage: /markdown-renderer-app/?link=URL_TO_MARKDOWN
-  Example: /markdown-renderer-app/?link=https://raw.githubusercontent.com/user/repo/main/file.md
+  Usage: https://mtalebi.github.io/markdown-renderer/?link=URL_TO_MARKDOWN
+  Example: https://mtalebi.github.io/markdown-renderer/?link=https://raw.githubusercontent.com/user/repo/main/file.md
   Just prepend this app's URL to any markdown file link to render it beautifully.
+  For GitHub Pages, ensure the folder is named 'markdown-renderer' and all paths are relative.
 -->
 <!DOCTYPE html>
 <html lang="en">
